@@ -1,3 +1,10 @@
+2005-10-24  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/image/ReplicateScaleFilter.java (setProperties): Changed
+	argument type.
+	* java/awt/image/CropImageFilter.java (setProperties): Changed
+	argument type.
+
 2005-10-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/awt/image/BufferedImage.java:
